# tap-webflow

./: LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_webflow/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
